# CI-CD-Supply-Chain-Auditor

./: CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
auditor/: __init__.py  __main__.py  cli.py  config.py  constants.py  exceptions.py  logging_config.py
auditor/checks/: __init__.py  actions.py  base.py  dependencies.py  permissions.py  runners.py  secrets.py  slsa.py
auditor/core/: __init__.py  analyzer.py  result.py  severity.py
auditor/parsers/: __init__.py  base.py  github_actions.py  gitlab_ci.py  validators.py
auditor/reporters/: __init__.py  base.py  html_reporter.py  json_reporter.py  markdown_reporter.py
auditor/utils/: __init__.py  file_utils.py  sanitizer.py
examples/: config.example.yml
reports/: self-audit.json
tests/: conftest.py  test_checks.py  test_config.py  test_parsers.py  test_reporters.py
